删去Experiments和Software，增加Collaborations和Model背景图片，修改Human Practices和Public Engagement文案，手册使用轮播图，增加Model页、InterLab页。

--- a/AppliedDesign.html
+++ b/AppliedDesign.html
@@ -16,7 +16,7 @@
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
     <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/parts.css&action=raw&ctype=text/css">-->
 
     <!--<script src="js/jquery.js"></script>-->
@@ -35,9 +35,174 @@
         <div class="moduleTitle">Applied Design</div>
     </div>
 
-    <div id="article">
-        <div class="mainText">
-            <p>There is nothing here at the moment.</p>
+    <div id="mainBody">
+        <div id="contents"></div>
+        <div id="article">
+            <div>
+                <h2 class="title">Background of Application</h2>
+                <div class="mainText">
+                    <p>According to the 2017 report of the International Diabetes Federation, there are 425 million
+                        people with diabetes in the world; in China, the number of people with diabetes is about 110
+                        million, and the number of people with hypertension is about 230 million. The patient population
+                        is extremely large. This type of population is the main patient group of hidden chronic kidney
+                        disease. If chronic kidney disease cannot be detected and treated early, it may eventually lead
+                        to uremia, with a mortality rate of up to 90%, and timely early diagnosis may bring about 70%
+                        reversal rate. Therefore, early screening for chronic kidney disease in patients with diabetes
+                        and hypertension is of great significance.</p>
+                    <p>The incidence of chronic kidney disease can be divided into five stages. The symptoms of patients in stage I and stage II are not obvious. By the third stage, the patient showed more obvious symptoms, and at this time, the kidneys had suffered more serious damage. Due to the concealment of chronic kidney disease in the first and second stages, many patients cannot go to the hospital for medical examination in time. When the patients with chronic kidney disease have reached the third stage of chronic kidney disease, the treatment effect will be far less than the first and second stages. In addition, going to the hospital for physical examination is also inconvenient, which also makes some patients unable to consciously go to the hospital for physical examination. Therefore, it is necessary to develop a portable tool for early detection of chronic kidney disease, to help potential patients with chronic kidney disease such as diabetes and hypertension to detect their physical condition at home in real time, and to provide early warning for the development of the first and second stages of chronic kidney disease.</p>
+                </div>
+            </div>
+            <div>
+                <h2 class="title">Principle of Design</h2>
+                <div class="mainText">
+                    <p>We selected β<sub>2</sub>-microglobulin (β<sub>2</sub>-MG) as an indicator of early detection of
+                        chronic kidney disease, because β<sub>2</sub>-MG has an abnormally elevated concentration in the
+                        first and second stages of development of chronic kidney disease (for detailed information of
+                        β<sub>2</sub>-MG please refer to our project section). We designed a visualized liquid crystal
+                        urine protein detector Dr. Familict whose detection principle is based on our liquid crystal
+                        detection experiment. In Dr. Familict, the liquid crystals are vertically aligned under the
+                        action of the DMOAP inducer, and the polarized light incident on the polarizing plate thereon
+                        passes through the liquid crystal to make the image inside the box black; when there is an
+                        excessive amount of β<sub>2</sub>-MG in the urine it reacts with the immobilized nanoantibodies
+                        on the glass slide. The larger antigen-antibody complexes generated will disturb the
+                        distribution of the liquid crystal molecules so that they are no longer vertically aligned, and
+                        the transmitted polarized light passes through the disorder. The aligned liquid crystal
+                        molecules turn into color, reflecting the presence of excess β<sub>2</sub>-MG in the urine,
+                        which provides early warning of the development of chronic kidney disease.</p>
+                </div>
+            </div>
+            <div>
+                <h2 class="title">Description of Product</h2>
+                <div class="mainText">
+                    <p>Our products are presented in kit form, without the need for expert knowledge, and can be tested
+                        by following the instructions. This kit can be used both at home and in the hospital, and is
+                        portable and easy to operate. The test results of this kit provide early warning only for the
+                        occurrence of chronic kidney disease, warning patients of the risk of chronic kidney disease,
+                        and cannot be used as a basis for the diagnosis of chronic kidney disease.</p>
+                    <h3 class="title">The First Generation of Dr. Familict</h3>
+                    <p><b>Structure:</b></p>
+                    <p>The kit is designed based on a liquid crystal cell. A polarizing plate is disposed above the
+                        reagent box, and the ordinary light that is incident on the reagent box through the polarizing
+                        plate can be polarized light; the inside of the reagent box is mainly composed of a glass
+                        carrier and a liquid crystal cell, and the two parts can be assembled into A test chip. (Fig.
+                        1)</p>
+                    <table class="img">
+                        <tr>
+                            <td colspan="2">
+                                <img src="http://2018.igem.org/wiki/images/9/97/T--DLUT_China_B--AppliedDesign1.png">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><p class="footnote">(a)</p></td>
+                        </tr>
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/e/ee/T--DLUT_China_B--AppliedDesign2.png"
+                                     alt=""></td>
+                            <td><img src="http://2018.igem.org/wiki/images/a/a9/T--DLUT_China_B--AppliedDesign3.png"
+                                     alt=""></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p class="footnote">(b)</p>
+                            </td>
+                            <td>
+                                <p class="footnote">(c)</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <img src="http://2018.igem.org/wiki/images/9/93/T--DLUT_China_B--AppliedDesign4.png">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <p class="footnote">Figure 1 The first generation of Dr. Familict shape and internal
+                                    structure design (a) Test kit design effect (b) Modified glass slide with DMOAP
+                                    inducer and nanoantibody (c) Modified with DMOAP inducer and filled vertically
+                                    Liquid crystal cell.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <img src="http://2018.igem.org/wiki/images/3/3c/T--DLUT_China_B--AppliedDesign5.jpg">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <p class="footnote">Fig.2 The first generation of Dr. Familict 3D printing model</p>
+                            </td>
+                        </tr>
+                    </table>
+                    <p>On the glass slide, we have optimized the corresponding concentration of DMOAP inducer and
+                        antibody. The substrate in the liquid crystal cell is also modified with DMOAP, and the liquid
+                        crystal cell is filled with vertically aligned liquid crystal. When used, the urine drop to be
+                        tested is first added to the glass slide and then the glass slide is assembled with the liquid
+                        crystal cell, and the complex formed by antigen-antibody combination can affect the liquid
+                        crystal alignment and produce corresponding image color change.</p>
+                    <p><b>Steps for Usage:</b></p>
+                    <p>Step 1: Take your own urine (a drop) and drop it onto a glass slide and leave it at room
+                        temperature for 40 minutes.</p>
+                    <p>Step 2: Rinse the glass slide with water and blow dry with a fan or blower.</p>
+                    <p>Step 3: The glass slide is placed on the liquid crystal cell to complete the assembly of the test
+                        chip.</p>
+                    <p>Step 4: Insert the test chip into the middle of the kit.</p>
+                    <p>Step 5: Use ordinary light (the light of the mobile phone) to illuminate the polarizer above the
+                        kit. If you can see the color of the light indicating that there is excessive β<sub>2</sub>-MG
+                        in the
+                        urine, the patient should go to the hospital for further physical examination. Only black images
+                        or sporadic bright spots can be seen, indicating that the patient is in good health.</p>
+                    <p>Step 6: After taking the observed image with a mobile phone, use our own software to process the
+                        image, and you can get the grayscale analysis result of the image and the current β<sub>2</sub>-MG
+                        content
+                        in the urine.</p>
+                    <p>Step 7: Just replace the disposable piece of glass when you need to use it again.</p>
+                    <p><b>Precautions:</b></p>
+                    <ol>
+                        <li>After the urine is added, the glass slide should be placed for at least 40 minutes;</li>
+                        <li>When using a hair dryer to dry the glass slide, use a cold wind file, and pay attention that
+                            the wind cannot be too large.
+                        </li>
+                    </ol>
+                    <h3 class="title">The Second Generation of Dr. Familict</h3>
+                    <p><b>Structure:</b></p>
+                    <p>In order to further improve the user-friendliness of the products and enable patients to obtain a
+                        more convenient product experience, we proposed an improved version of the product design based
+                        on the first-generation product design. The operation of the second generation of Dr. Familict
+                        kit is semi-automated and its size is 20 cm &times; 20 cm &times; 10 cm. It consists mainly of a
+                        slide slot, a wash buffer chamber, a waste collector, a liquid crystal cell, a polarizer and an
+                        analyzer. The antigen-antibody reaction is still carried out on the slide, and the slide is
+                        moved to the slide position by sliding positioning. Different reaction chambers are used to
+                        complete the operations of dropping antibody, dropping liquid crystal, rinsing, and image
+                        observation, etc.</p>
+                    <p><b>Steps for Usage:</b></p>
+                    <p>Step 1: Insert the antigen-coated glass slide into the slide slot, and the kit system
+                        automatically drops a drop of the antibody solution.</p>
+                    <p>Step 2: The user drops a drop of urine in the test area and presses the button on the kit to
+                        start timing. Subsequent operations will be done automatically by the system.</p>
+                    <p>Step 3: The system timed reaction 40 minutes after the slide is moved to the washing buffer
+                        chamber for 30 seconds of rinsing and drying, after the slide moved to the detection area, the
+                        system drops the liquid crystal and turns on the bottom light, ordinary light passes the
+                        polarizer produces polarized light and produces a color change in the liquid crystal region.</p>
+                    <p>Step 4: The user takes a picture of the detected image and uploads it to the APP to obtain the
+                        image gray scale data and the β<sub>2</sub>-MG concentration in the urine, and the corresponding
+                        medical advice.</p>
+                    <p><b>Precautions:</b></p>
+                    <ol>
+                        <li>The antigen layer glass slide will automatically drop the antibody solution only when it is
+                            inserted into the correct position in the groove;
+                        </li>
+                        <li>When the crystal liquid is added and when you can observe and take pictures, the system will
+                            make a sound to remind you so you don't have to wait at the kit.
+                        </li>
+                    </ol>
+                    <p><b>Customer Feedback</b></p>
+                    <p>Although we have implemented the semi-automated operation of the second-generation of Dr.
+                        Familict design and reduced the user's operation steps, we still hope that you can provide
+                        constructive and valuable advice for our products, including but not limited to your hope of
+                        better operation process, results presentation, reaction time, and data analysis software. We
+                        will further improve user interface based on your feedback on our product design.</p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -71,11 +236,14 @@
     <!--<script src="js/script.js"></script>-->
     <!--<script src="js/contents.js"></script>-->
     <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>-->
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
                 topToggle();
+            });
+            $(window).scroll(function () {
+                contentsAnchor();
             });
         });
     </script>
