--- a/Attributions.html
+++ b/Attributions.html
@@ -31,7 +31,7 @@
 <div id="dlutb">
     <div id="moduleHeader">
         <div id="nav"></div>
-        <!--todo 背景图片-->
+        <div id="background" class="collaborations"></div>
         <div class="moduleTitle">Attributions</div>
     </div>
 
@@ -100,9 +100,7 @@
 
             <h2 class="title">Funding</h2>
             <div class="mainText">
-                <p>Thanks to TECAN in Swiss for for providing financial assistance. (<a href="https://www.tecan.com/"
-                                                                                        target="_blank">https://www.tecan.com/</a>)
-                </p>
+                <p>Thanks to TECAN in Swiss for for providing financial assistance. (<a href="http://www.tecan.com/" target="_blank">http://www.tecan.com/</a>)</p>
             </div>
 
             <h2 class="title">Collaboration</h2>
@@ -112,15 +110,6 @@
             </div>
 
             <h2 class="title">Thank you for helping DLUT_China_B!</h2>
-
-            <p>Address</p>
-            <p>School of Life Science and Biotechnology</p>
-            <p>No.2 Linggong Road, Ganjingzi District</p>
-            <p> Dalian University of Technology</p>
-            <p> Dalian, Liaoning Province</p>
-            <p> P.R. of China</p>
-            <p> Zip: 116024</p>
-            <p> Email:general@dlut.edu.cn</p>
         </div>
     </div>
 
