--- a/Collaborations.html
+++ b/Collaborations.html
@@ -79,10 +79,10 @@
                         effects. The students of the DLUT-A team plan to oxidize uric acid to 5-hydroxyisouric acid by
                         engineering bacteria to express a uric acid oxidase. The compound is decomposed and quickly
                         decomposed into allantoin which is easily metabolized, thereby reducing uric acid. </p>
-                    <p>Finally, the DLUT-B team brought a portable introduction to the detection of β2-microglobulin. By
+                    <p>Finally, the DLUT-B team brought a portable introduction to the detection of β<sub>2</sub>-microglobulin. By
                         immobilizing the Nanobody on the slide, a change in the alignment of the liquid crystal causes a
-                        change in the brightness of the image to detect an excessive excess of β2-micro in the urine. As
-                        a possible marker of chronic kidney disease, β2-micro is an effective and portable method for
+                        change in the brightness of the image to detect an excessive excess of β<sub>2</sub>-micro in the urine. As
+                        a possible marker of chronic kidney disease, β<sub>2</sub>-micro is an effective and portable method for
                         early detection of chronic kidney disease in patients with diabetes and hypertension. In
                         addition, team B students considered co-expression of Nanobodies with an enzyme to catalyze the
                         immobilization of Nanobodies with the addition of an aldehyde group at the end of the
