--- a/HumanPractices.html
+++ b/HumanPractices.html
@@ -78,7 +78,7 @@
                         obvious symptoms will he go to the hospital for an examination. But they may already have
                         entered the dominant diabetic nephropathy (overtDN).</p>
                     <p>Blood test is the most common diagnosis method of the hospital currently. It takes ¥48 to test
-                        the blood β2-microglobulin. However, Dr.Liu said that if a portable urine test method can be
+                        the blood β<sub>2</sub>-microglobulin. However, Dr.Liu said that if a portable urine test method can be
                         developed, it can not only alleviate the pain of blood drawing, but also greatly improve the
                         awareness of diabetes patients and the rate of early visits.</p>
                     <p>In this interview we exchanged ideas with doctors, and we have learned that from a clinical
@@ -108,7 +108,7 @@
                         the Research Group of Biomolecular Efficient Separation and Characterization of Dalian Institute
                         of Chemical Physics, Chinese Academy of Sciences in October 2018. We exchanged ideas with
                         researcher Yuan Huiming. Researcher Yuan said that the main problem in urine testing is to
-                        eliminate interference from other proteins in the urine. The nanobody of β2-microglobulin we
+                        eliminate interference from other proteins in the urine. The nanobody of β<sub>2</sub>-microglobulin we
                         selected is more specific and can solve this problem well. On the other hand, our liquid crystal
                         detection method has extremely high sensitivity and has great advantages for the detection of
                         trace proteins in urine.</p>
