--- a/InterLab.html
+++ b/InterLab.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>InterLab</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/nav.css">
+    <!--<link rel="stylesheet" href="css/style.css">-->
+    <!--<link rel="stylesheet" href="css/nav.css">-->
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
-    <link rel="stylesheet" href="css/fontawesome.css">
-    <link rel="stylesheet" href="css/contents.css">
+    <!--<link rel="stylesheet" href="css/fontawesome.css">-->
+    <!--<link rel="stylesheet" href="css/contents.css">-->
     <!--<link rel="stylesheet" href="css/parts.css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/parts.css&action=raw&ctype=text/css">-->
 
-    <script src="js/jquery.js"></script>
+    <!--<script src="js/jquery.js"></script>-->
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="js/bubbles.js"></script>-->
     <!--<script src="js/typed.js"></script>-->
@@ -63,8 +63,7 @@
                     <p>Transformation</p>
                     <p>We transformed the plasmids (listed below) resuspended from the Distribution Kit into E. coli
                         DH5-alpha cells. Colonies were given 16 hours to grow.</p>
-                    <!--todo 图片链接 -->
-                    <div class="img"><img src="img/InterLab/1.png"></div>
+                    <div class="img"><img src="http://2018.igem.org/wiki/images/8/81/T--DLUT_China_B--InterLab1.png"></div>
                     <p>2 colonies of each device were inoculated over night into 5 ml Luria-Bertani media with 25 μg/mL
                         Chloramphenicol in a 37°C, 220 rpm shaking incubator. Cell cultures were diluted to a target
                         OD600 of 0.02 into same LB medium in 50 mL falcon tube covered with foil before use Diluted
@@ -81,16 +80,16 @@
                         Counting colony-forming units (CFUs) from the sample.</p>
                     <h3 class="title">Results and Discussion</h3>
                     <p>Below is the Fluorescein Standard Curve and the particle standard curve we obtained.</p>
-                    <div class="img"><img src="img/InterLab/2.png"></div>
-                    <div class="img"><img src="img/InterLab/3.png"></div>
-                    <div class="img"><img src="img/InterLab/4.png"></div>
+                    <div class="img"><img src="http://2018.igem.org/wiki/images/7/77/T--DLUT_China_B--InterLab2.png"></div>
+                    <div class="img"><img src="http://2018.igem.org/wiki/images/d/d5/T--DLUT_China_B--InterLab3.png"></div>
+                    <div class="img"><img src="http://2018.igem.org/wiki/images/b/b5/T--DLUT_China_B--InterLab4.png"></div>
                     <p>In the Fluorescein Standard Curve, one of the four sets of data we measured had a problem with
                         dilution.</p>
                     <p>Below is Cell measurement protocol.</p>
                     <table class="img">
                         <tr>
-                            <td><img src="img/InterLab/5.png"></td>
-                            <td><img src="img/InterLab/6.png"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/0/02/T--DLUT_China_B--InterLab5.png"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/a/a7/T--DLUT_China_B--InterLab6.png"></td>
                         </tr>
                     </table>
                 </div>
@@ -105,16 +104,16 @@
                         results.</p>
                     <table class="img">
                         <tr>
-                            <td><img src="img/InterLab/7.png"></td>
-                            <td><img src="img/InterLab/8.png"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/e/ee/T--DLUT_China_B--InterLab7.png"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/8/88/T--DLUT_China_B--InterLab8.png"></td>
                         </tr>
                         <tr>
-                            <td><img src="img/InterLab/9.png"></td>
-                            <td><img src="img/InterLab/10.png"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/f/f7/T--DLUT_China_B--InterLab9.png"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/5/54/T--DLUT_China_B--InterLab10.png"></td>
                         </tr>
                         <tr>
-                            <td><img src="img/InterLab/11.png"></td>
-                            <td><img src="img/InterLab/12.png"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/5/50/T--DLUT_China_B--InterLab11.png"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/1/10/T--DLUT_China_B--InterLab12.png"></td>
                         </tr>
                     </table>
                     <p>SpheroTech calibration beads</p>
@@ -149,14 +148,17 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <script src="js/script.js"></script>
-    <script src="js/contents.js"></script>
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>-->
+    <!--<script src="js/script.js"></script>-->
+    <!--<script src="js/contents.js"></script>-->
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
                 topToggle();
+            });
+            $(window).scroll(function () {
+                contentsAnchor();
             });
         });
     </script>
