--- a/Parts.html
+++ b/Parts.html
@@ -73,6 +73,36 @@
                     <td>863bp</td>
                 </tr>
             </table>
+            <table class="img">
+                <tr>
+                    <td><img src="http://2018.igem.org/wiki/images/4/41/T--DLUT_China_B--Parts3.png" alt=""></td>
+                </tr>
+            </table>
+            <p>We used SPR (Surface plasmon resonance) to characterize Nanobodies.</p>
+            <p>First, we immobilized the antigen bound by our Nanobody on the SPR crystal. Then we configured different
+                concentrations of Nanobody solutions (including blank solutions), and then, through a microflow system,
+                a solution with nanobody is injected over the bait layer. As nanobody binds the antigen bound, an
+                increase in SPR signal (expressed in response units, RU) is observed. After desired association time, a
+                solution without nanobody (usually the buffer) is injected on the microfluidics that dissociates the
+                bound complex between antigen bound and nanobody. Now as nanobody dissociates from the antigen bound, a
+                decrease in SPR signal (expressed in resonance units, RU) is observed. From these association ('on
+                rate', ka) and dissociation rates ('off rate', kd), the equilibrium dissociation constant ('binding
+                constant', KD) can be calculated. The equilibrium dissociation constant represents the strength of our
+                affinity. </p>
+            <p>After calculation, our KD is 9.127×10-8.</p>
+            <table>
+                <tr>
+                    <td>ka(1/Ms)</td>
+                    <td>kd(1/s)</td>
+                    <td>KD(M)</td>
+                </tr>
+                <tr>
+                    <td>2.440E+05</td>
+                    <td>0.02227</td>
+                    <td>9.127E-08</td>
+                </tr>
+            </table>
+
         </div>
     </div>
 
