--- a/PublicEngagement.html
+++ b/PublicEngagement.html
@@ -51,7 +51,9 @@
                         awareness of CKD has been significantly raised. During the promotion process, the residents
                         asked many questions about diabetic nephropathy. The team members have answered them one by
                         one.</p>
-                    <p>Through this event, growing number of people were aware of the importance of regular medical examinations and have a deeper understanding of kidney disease. They also learned about the prevention of diabetic nephropathy and hypertensive nephropathy through this opportunity.</p>
+                    <p>Through this event, growing number of people were aware of the importance of regular medical
+                        examinations and have a deeper understanding of kidney disease. They also learned about the
+                        prevention of diabetic nephropathy and hypertensive nephropathy through this opportunity.</p>
                     <table class="img">
                         <tr>
                             <td><img src="http://2018.igem.org/wiki/images/0/0c/T--DLUT_China_B--HumanPractice6.jpg">
@@ -132,7 +134,10 @@
                         general knowledge of biology. “Understanding Micro-World” provides visitors with microscopes and
                         some samples made by the team members which let them to observe and understand the microbes we
                         can't see. This part attracted many primary and middle school students.</p>
-                    <p>This exhibition not only introduced synthetic biology and iGEM competitions, but also promoted our Dr. Familict project to let more people know the seriousness of kidney disease. We also got some valuable market research data. The public has given considerable attention to the project, which also makes our project more meaningful.</p>
+                    <p>This exhibition not only introduced synthetic biology and iGEM competitions, but also promoted
+                        our Dr. Familict project to let more people know the seriousness of kidney disease. We also got
+                        some valuable market research data. The public has given considerable attention to the project,
+                        which also makes our project more meaningful.</p>
                     <table class="img">
                         <tr>
                             <td><img src="http://2018.igem.org/wiki/images/d/d1/T--DLUT_China_B--Education15.jpg"></td>
@@ -158,7 +163,11 @@
                     <p>Our team came to the High School affiliated to Dalian University of Technology. After the team
                         members explained the principle of synthetic biology, many students have shown a great interest
                         in synthetic biology.</p>
-                    <p>This communication not only allowed us to look at our projects more seriously and rigorously, but also provided some new ideas for the students of the iGEM association, which broadened their horizons and inspire them to learn more about synthetic biology. We hoped that our iGEM publicity trip would arouse the students’ interest in synthetic biology and contribute to the development of the iGEM competition in China. </p>
+                    <p>This communication not only allowed us to look at our projects more seriously and rigorously, but
+                        also provided some new ideas for the students of the iGEM association, which broadened their
+                        horizons and inspire them to learn more about synthetic biology. We hoped that our iGEM
+                        publicity trip would arouse the students’ interest in synthetic biology and contribute to the
+                        development of the iGEM competition in China. </p>
                     <table class="img">
                         <tr>
                             <td><img src="http://2018.igem.org/wiki/images/9/93/T--DLUT_China_B--Education9.jpg"></td>
