--- a/indexPage.html
+++ b/indexPage.html
@@ -108,7 +108,7 @@
                                 <img src="http://2018.igem.org/wiki/images/4/47/T--DLUT_China_B--Top1.png">
                                 <div>
                                     <h2>Dr. Familict</h2>
-                    <p>Hello! I’m a lovely Kidney baby, an essential organ in your body. Can you see those sparkling items pointed by my hand? Right! This is a wonderful liquid crystal show caused by the combination of β2-MG and nanobodies. What’s more, the different concentrations of β2-MG make the different degree of brightness showed by liquid crystal. We can make use of this phenomenon to achieve early detection of CKD caused mostly by diabetes and high blood pressure according to the brightness displayed by the detector confidently. Such an amazing idea, right?</p>
+                    <p>Hello! I’m a lovely Kidney baby, an essential organ in your body. Can you see those sparkling items pointed by my hand? Right! This is a wonderful liquid crystal show caused by the combination of β<sub>2</sub>-MG and nanobodies. What’s more, the different concentrations of β<sub>2</sub>-MG make the different degree of brightness showed by liquid crystal. We can make use of this phenomenon to achieve early detection of CKD caused mostly by diabetes and high blood pressure according to the brightness displayed by the detector confidently. Such an amazing idea, right?</p>
                 </div>
             </div>
             <!--<div id="box">-->
