--- a/TeamMembers.html
+++ b/TeamMembers.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>2018 iGEM_DLUT_B</title>
-    <!--<link rel="stylesheet" href="css/style.css">-->
-    <!--<link rel="stylesheet" href="css/nav.css">-->
-    <!--<link rel="stylesheet" href="css/fontawesome.css">-->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/fontawesome.css">
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
-    <!--<link rel="stylesheet" href="css/team.css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="css/team.css">
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/team.css&action=raw&ctype=text/css">
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/team.css&action=raw&ctype=text/css">-->
 
-    <!--<script src="js/jquery.js"></script>-->
+    <script src="js/jquery.js"></script>
     <!--<script src="js/typed.js"></script>-->
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>-->
@@ -171,6 +171,9 @@
                 <div class="td"></div>
             </div>
         </div>
+
+        <video src="video/TeamMembers.mp4" width="650" controls></video>
+
         <div id="instructors" class="mainText">
             <div class="tr">
                 <div class="td" id="img10">
@@ -294,8 +297,8 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <!--<script src="js/script.js"></script>-->
-    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
+    <script src="js/script.js"></script>
+    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
     <script>
         /*口号*/
         // let options = {
