--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
     <!--<link rel="stylesheet" href="css/fontawesome.css">-->
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">
+    <link rel="stylesheet"
+          href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
+    <link rel="stylesheet"
+          href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
+    <link rel="stylesheet"
+          href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
+    <link rel="stylesheet"
+          href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
 
     <!--<script src="js/jquery.js"></script>-->
     <!--<script src="js/bubbles.js"></script>-->
@@ -44,7 +48,12 @@
             <img src="http://2018.igem.org/wiki/images/4/47/T--DLUT_China_B--Top1.png">
             <div>
                 <h2>Dr. Familict</h2>
-                <p>Hello! I’m a lovely Kidney baby, an essential organ in your body. Can you see those sparkling items pointed by my hand? Right! This is a wonderful liquid crystal show caused by the combination of β2-MG and nanobodies. What’s more, the different concentrations of β2-MG make the different degree of brightness showed by liquid crystal. We can make use of this phenomenon to achieve early detection of CKD caused mostly by diabetes and high blood pressure according to the brightness displayed by the detector confidently. Such an amazing idea, right?</p>
+                <p>Hello! I’m a lovely Kidney baby, an essential organ in your body. Can you see those sparkling items
+                    pointed by my hand? Right! This is a wonderful liquid crystal show caused by the combination of
+                    β<sub>2</sub>-MG and nanobodies. What’s more, the different concentrations of β<sub>2</sub>-MG make
+                    the different degree of brightness showed by liquid crystal. We can make use of this phenomenon to
+                    achieve early detection of CKD caused mostly by diabetes and high blood pressure according to the
+                    brightness displayed by the detector confidently. Such an amazing idea, right?</p>
             </div>
         </div>
         <br>
@@ -65,7 +74,7 @@
                 </a>
             </div>
             <div class="td">
-                <a href="http://2018.igem.org/Team:DLUT_China_B/Model">
+                <a href="http://2018.igem.org/Team:DLUT_China_B/GrayValueConcentrationModel">
                     <img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--Circle3.png" width="250">
                     <div>Model</div>
                 </a>
@@ -444,7 +453,8 @@
         function isShow($el) {
             let winH = $(window).height(), /*获取窗口高度*/
                 scrollH = $(window).scrollTop(), /*获取窗口滚动高度*/
-                top = $el.offsetTop; /*获取元素距离窗口顶部偏移高度*/
+                top = $el.offsetTop;
+            /*获取元素距离窗口顶部偏移高度*/
             return top < scrollH + winH;
         }
 
